@@ -45,5 +45,8 @@ class Handler(enum.IntEnum):
     # For linux with wayland but without dbus portal, e.g. Hyprland
     GRIM = enum.auto()
 
+    # For linux with wayland and Gnome
+    GNOME_SCREENSHOT = enum.auto()
+
     # For linux with wayland
     DBUS_PORTAL = enum.auto()
